--- a/src/TwentyFortyEight.Maui/Components/HowToPlayModal.xaml
+++ b/src/TwentyFortyEight.Maui/Components/HowToPlayModal.xaml
@@ -11,11 +11,11 @@
           InputTransparent="False">
         
         <!-- Dark overlay background -->
-        <BoxView BackgroundColor="#80000000" />
+        <BoxView Color="{StaticResource ModalOverlay}" />
         
         <!-- Modal dialog -->
-        <Border BackgroundColor="{AppThemeBinding Light=#faf8ef, Dark=#2a2a2a}"
-                Stroke="{AppThemeBinding Light=#bbada0, Dark=#3c3a32}"
+        <Border Background="{AppThemeBinding Light={StaticResource ModalBackgroundLight}, Dark={StaticResource ModalBackgroundDark}}"
+            Stroke="{AppThemeBinding Light={StaticResource GamePanelBackgroundLight}, Dark={StaticResource GamePanelBackgroundDark}}"
                 StrokeThickness="3"
                 Padding="30"
                 HorizontalOptions="Center"
@@ -46,7 +46,7 @@
                     AutomationId="GotItButton"
                     Command="{Binding CloseCommand, Source={x:Reference this}}"
                     Text="{x:Static strings:AppStrings.GotIt}"
-                    BackgroundColor="#8f7a66"
+                    Background="{AppThemeBinding Light={StaticResource GameButtonBackgroundLight}, Dark={StaticResource GameButtonBackgroundDark}}"
                     TextColor="White"
                     FontSize="18"
                     FontAttributes="Bold"
