--- a/src/TwentyFortyEight.Maui/MainPage.xaml
+++ b/src/TwentyFortyEight.Maui/MainPage.xaml
@@ -45,6 +45,13 @@
             Command="{Binding ShowHowToPlayCommand}"
             Order="Secondary"
             Priority="3" />
+        <ToolbarItem
+            x:Name="ToolbarAboutButton"
+            AutomationId="ToolbarAboutButton"
+            Text="{x:Static strings:AppStrings.About}"
+            Command="{Binding OpenAboutCommand}"
+            Order="Secondary"
+            Priority="4" />
     </ContentPage.ToolbarItems>
 
     <Grid x:Name="RootLayout" Padding="20" RowSpacing="10">
